Fixed overflow on body

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -6,6 +6,7 @@
 }
 
 body{
+  overflow: hidden;
   background-color: #f5f8fa;
 }
 
